Add logo animation styles and scripts across multiple HTML files

--- a/freightforwarding.html
+++ b/freightforwarding.html
@@ -184,8 +184,8 @@
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                                        <a href="#"><img style="width: 40px; height: 40px;" src="./assets/img/1559863.png" alt=""> </a>
-
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                                     <a href="contact.html" class="theme-btn">GET A QUOTE <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                                 <div class="search-item">
-                                    <a href="#0" class="search-trigger search-icon"><i class="fal fa-search"></i></a>
+                                    <a href="#"><img style="width: 40px; height: 40px;" src="./assets/img/1559863.png" alt=""> </a>
                                     <div class="header__hamburger d-xl-block my-auto">
                                         <div class="sidebar__toggle">
                                             <i class="fas fa-bars"></i>
