--- a/etashtradingvietnam.html
+++ b/etashtradingvietnam.html
@@ -326,7 +326,7 @@
                                     <a href="contact.html" class="theme-btn">GAT A QUOTE <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                                 <div class="search-item">
-                                    <a href="#0" class="search-trigger search-icon"><i class="fal fa-search"></i></a>
+                                    <a href="#"><img style="width: 40px; height: 40px;" src="./assets/img/1559863.png" alt=""> </a>
                                     <div class="header__hamburger d-xl-block my-auto">
                                         <div class="sidebar__toggle">
                                             <i class="fas fa-bars"></i>
