--- a/truckingind.html
+++ b/truckingind.html
@@ -184,6 +184,9 @@
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            
+
                         </div>
                     </div>
                 </div>
@@ -193,7 +196,10 @@
                             <div class="header-left">
                                 <div class="logo">
                                     <a href="index.html" class="header-logo">
-                                        <img src="assets/img/logo/etashlogo.png" alt="logo-img">
+                                        <div class="logo-container">
+                                            <img src="assets/img/logo/etashlogo.png" alt="Etash Logo Green" class="logo-img logo-primary active">
+                                            <img src="assets/img/alternate_etashlogo.png" alt="Etash Logo Blue-Orange" class="logo-img logo-secondary">
+                                        </div>
                                     </a>
                                 </div>
                             </div>
@@ -202,118 +208,35 @@
                                     <div class="main-menu">
                                         <nav id="mobile-menu">
                                             <ul>
-                                                <li class="has-dropdown active menu-thumb">
-                                                    <a href="index.html">
-                                                    Home 
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
-                                                    <ul class="submenu has-homemenu">
-                                                        <li>
-                                                            <div class="homemenu-items">
-                                                                <div class="homemenu">
-                                                                    <div class="homemenu-thumb">
-                                                                        <img src="assets/img/header/home-1.jpg" alt="img">
-                                                                        <div class="demo-button">
-                                                                            <a href="index.html" class="theme-btn">
-                                                                                Multi Page
-                                                                            </a>
-                                                                            <a href="index-one-page.html" class="theme-btn">
-                                                                                One Page
-                                                                            </a>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="homemenu-content text-center">
-                                                                        <h4 class="homemenu-title">
-                                                                            Home 01
-                                                                        </h4>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="homemenu">
-                                                                    <div class="homemenu-thumb mb-15">
-                                                                        <img src="assets/img/header/home-2.jpg" alt="img">
-                                                                        <div class="demo-button">
-                                                                            <a href="index-2.html" class="theme-btn">
-                                                                                Multi Page
-                                                                            </a>
-                                                                            <a href="index-two-page.html" class="theme-btn">
-                                                                                One Page
-                                                                            </a>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="homemenu-content text-center">
-                                                                        <h4 class="homemenu-title">
-                                                                            Home 02
-                                                                        </h4>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li class="has-dropdown active d-xl-none">
-                                                    <a href="team.html" class="border-none">
-                                                    Home
-                                                    <i class="fa-regular fa-plus"></i>
-                                                    </a>
-                                                    <ul class="submenu">
-                                                        <li><a href="index.html">Home 01</a></li>
-                                                        <li><a href="index-2.html">Home 02</a></li>
-                                                    </ul>
+                                                <li class="active">
+                                                    <a href="index.html">Home</a>
                                                 </li>
                                                 <li>
                                                     <a href="about.html">About Us</a>
                                                 </li>
-                                                <li class="has-dropdown">
-                                                    <a href="news.html">
-                                                        Pages
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
-                                                    <ul class="submenu">
-                                                        <li class="has-dropdown">
-                                                            <a href="team-details.html">
-                                                                Our Team
-                                                                <i class="fas fa-angle-down"></i>
-                                                            </a>
-                                                            <ul class="submenu">
-                                                                <li><a href="team.html">Our Team</a></li>
-                                                                <li><a href="team-details.html">Team Details</a></li>
-                                                            </ul>
-                                                        </li>
-                                                        <li><a href="pricing.html">Pricing</a></li>
-                                                        <li><a href="faq.html">Faq's</a></li>
-                                                        <li><a href="404.html">404 Page</a></li>
-                                                    </ul>
-                                                </li>
                                                 <li>
-                                                    <a href="service-details.html">
+                                                    <a href="service.html">
                                                         Services
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="service.html">Services</a></li>
-                                                        <li><a href="service-details.html">Service Details</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <a href="project.html">
-                                                        Projects
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
-                                                    <ul class="submenu">
-                                                        <li><a href="project.html">Projects</a></li>
-                                                        <li><a href="project-details.html">Project Details</a></li>
+                                                        <li><a href="lastmile.html">Last Mile Delivery</a></li>
+                                                        <li><a href="midmile.html">Middle Mile</a></li>
+                                                        <li><a href="hyperlocal.html">Hyper Local</a></li>
+                                                        <li><a href="longhaultransportation.html">Long Haul Transportation</a></li>
+                                                        <li><a href="warehousing.html">Warehousing</a></li>
+                                                        <li><a href="freightforwarding.html">Freight Forwarding</a></li>
+                                                        <li><a href="airfreight.html">Air Freight</a></li>
+                                                        <li><a href="packersnmovers.html">Packers & Movers</a></li>
                                                     </ul>
                                                 </li>
                                                 <li>
                                                     <a href="news.html">
-                                                        Blog
-                                                        <i class="fa-regular fa-plus"></i>
+                                                        Blogs
                                                     </a>
-                                                    <ul class="submenu">
-                                                        <li><a href="news-grid.html">Blog Grid</a></li>
-                                                        <li><a href="news.html">Blog Standard</a></li>
-                                                        <li><a href="news-details.html">Blog Details</a></li>
-                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a href="career.html">Careers</a>
                                                 </li>
                                                 <li>
                                                     <a href="contact.html">Contact Us</a>
@@ -326,7 +249,7 @@
                                     <a href="contact.html" class="theme-btn">GAT A QUOTE <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                                 <div class="search-item">
-                                    <a href="#0" class="search-trigger search-icon"><i class="fal fa-search"></i></a>
+                                    <a href="#"><img style="width: 40px; height: 40px;" src="./assets/img/1559863.png" alt=""> </a>
                                     <div class="header__hamburger d-xl-block my-auto">
                                         <div class="sidebar__toggle">
                                             <i class="fas fa-bars"></i>
@@ -338,7 +261,7 @@
                     </div>
                 </div>
             </div>
-        </header> 
+        </header>
 
         <!-- Search Area Start -->
         <div class="search-wrap">
