--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                         <i class="fal fa-map-marker-alt"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a target="_blank" href="#">Main Street, Melbourne, Australia</a>
+                                        <a target="_blank" href="#">Nijom Path, Sixmile, Guwahati-781022</a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -243,7 +243,7 @@
                                         <i class="fal fa-envelope"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="mailto:info@example.com"><span class="mailto:info@example.com">info@example.com</span></a>
+                                        <a href="mailto:business@etashdeliveries.com"><span class="mailto:business@etashdeliveries.com">business@etashdeliveries.com</span></a>
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -251,7 +251,7 @@
                                         <i class="fal fa-clock"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a target="_blank" href="#">Mod-Friday, 09am -05pm</a>
+                                        <a target="_blank" href="#">Mon-Sat, 09:30am-06:30pm
                                     </div>
                                 </li>
                                 <li class="d-flex align-items-center">
@@ -259,7 +259,7 @@
                                         <i class="far fa-phone"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="tel:+11002345909">+11002345909</a>
+                                        <a href="tel:+11002345909">+91-7099070701
                                     </div>
                                 </li>
                             </ul>
@@ -340,22 +340,13 @@
                                                 <li>
                                                     <a href="service.html">
                                                         Services
-                                                        <i class="fa-regular fa-plus"></i>
+                                                        
                                                     </a>
-                                                    <ul class="submenu">
-                                                        <li><a href="lastmile.html">Last Mile Delivery</a></li>
-                                                        <li><a href="midmile.html">Middle Mile</a></li>
-                                                        <li><a href="hyperlocal.html">Hyper Local</a></li>
-                                                        <li><a href="longhaultransportation.html">Long Haul Transportation</a></li>
-                                                        <li><a href="warehousing.html">Warehousing</a></li>
-                                                        <li><a href="freightforwarding.html">Freight Forwarding</a></li>
-                                                        <li><a href="airfreight.html">Air Freight</a></li>
-                                                        <li><a href="packersnmovers.html">Packers & Movers</a></li>
-                                                    </ul>
+                                                    
                                                 </li>
                                                 <li>
-                                                    <a href="news.html">
-                                                        Blogs
+                                                    <a href="etashvietnam.html">
+                                                        ETASH Vietnam
                                                     </a>
                                                 </li>
                                                 <li>
@@ -369,7 +360,7 @@
                                     </div>
                                 </div>
                                 <div class="header-button">
-                                    <a href="contact.html" class="theme-btn">GAT A QUOTE <i class="fa-regular fa-arrow-right"></i></a>
+                                    <a href="contact.html" class="theme-btn">TRACK DELIVERY <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                                 <div class="search-item">
                                     <a href="#"><img style="width: 40px; height: 40px;" src="./assets/img/1559863.png" alt=""> </a>
@@ -424,7 +415,7 @@
                                             Etash empowers businesses in Northeast India by expanding market reach, enhancing customer satisfaction, and streamlining logistics.<br> Committed to fostering regional connectivity and entrepreneurship, Etash is a catalyst for economic progress in the region.
                                         </p>
                                         <div class="hero-button">
-                                            <a href="#" data-animation="fadeInUp" data-delay="1.9s" class="theme-btn hover-white" onclick="openApplicationForm()">
+                                            <a href="shipping.html" data-animation="fadeInUp" data-delay="1.9s" class="theme-btn hover-white" >
                                                 Ship With Us
                                                 <i class="fa-solid fa-arrow-right-long"></i>
                                             </a>
@@ -454,7 +445,7 @@
                                             At Etash, we ensure fast, secure, and reliable deliveries with a commitment to efficiency, <br> customer satisfaction, and seamless logistics across Assam and the North-East. <br> 
                                         </p>
                                         <div class="hero-button">
-                                            <a href="#" data-animation="fadeInUp" data-delay="1.9s" class="theme-btn hover-white" onclick="openApplicationForm()">
+                                            <a href="shipping.html" data-animation="fadeInUp" data-delay="1.9s" class="theme-btn hover-white" >
                                                 Ship With Us
                                                 <i class="fa-solid fa-arrow-right-long"></i>
                                             </a>
@@ -484,7 +475,7 @@
                                             Etash provides flexible warehousing solutions across Assam and the North-East, tailored <br> to client needs with secure storage, efficient inventory management, and seamless distribution. <br>
                                         </p>
                                         <div class="hero-button">
-                                            <a href="#" data-animation="fadeInUp" data-delay="1.9s" class="theme-btn hover-white" onclick="openApplicationForm()">
+                                            <a href="shipping.html" data-animation="fadeInUp" data-delay="1.9s" class="theme-btn hover-white" >
                                                 Ship With Us
                                                 <i class="fa-solid fa-arrow-right-long"></i>
                                             </a>
