--- a/freightforwarding.html
+++ b/freightforwarding.html
@@ -213,22 +213,15 @@
                                                 <li class="active">
                                                     <a href="service.html">
                                                         Services
-                                                        <i class="fa-regular fa-plus"></i>
+                                                        
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="lastmile.html">Last Mile Delivery</a></li>
-                                                        <li><a href="midmile.html">Middle Mile</a></li>
-                                                        <li><a href="hyperlocal.html">Hyper Local</a></li>
-                                                        <li><a href="longhaultransportation.html">Long Haul Transportation</a></li>
-                                                        <li><a href="warehousing.html">Warehousing</a></li>
-                                                        <li class="active"><a href="freightforwarding.html">Freight Forwarding</a></li>
-                                                        <li><a href="airfreight.html">Air Freight</a></li>
-                                                        <li><a href="packersnmovers.html">Packers & Movers</a></li>
+                                                        
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="news.html">
-                                                        Blogs
+                                                    <a href="etashvietnam.html">
+                                                        ETASH Vietnam
                                                     </a>
                                                 </li>
                                                 <li>
@@ -239,7 +232,7 @@
                                     </div>
                                 </div>
                                 <div class="header-button">
-                                    <a href="contact.html" class="theme-btn">GET A QUOTE <i class="fa-regular fa-arrow-right"></i></a>
+                                    <a href="contact.html" class="theme-btn">TRACK DELIVERY <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                                 <div class="search-item">
                                     <a href="#"><img style="width: 40px; height: 40px;" src="./assets/img/1559863.png" alt=""> </a>
