Update ETASH Vietnam links to point to the new "etashtradingvietnam.html" page across multiple HTML files. Enhance the Career section with new styles and a more interactive application form. Replace images and improve visual elements for better user experience.

--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@
                                                     
                                                 </li>
                                                 <li>
-                                                    <a href="etashvietnam.html">
+                                                    <a href="etashtradingvietnam.html">
                                                         ETASH Vietnam
                                                     </a>
                                                 </li>
@@ -340,8 +340,8 @@
         <section class="about-section fix section-padding">
             <div class="about-shape-1 float-bob-x">
             </div>
-            <div class="about-shape-2 float-bob-y">
-                <img src="assets/img/team/shape-1.png" alt="img">
+            <div class="about-shape-2 float-bob-y" style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                <img src="assets/img/chatgpt_img.png" alt="img" style="width: 330px; height: auto; margin-left: 0;">
             </div>
             <div class="container">
                 <div class="about-wrapper">
@@ -393,9 +393,9 @@
         <!-- Achivements Section Start -->
         <section class="achivements-section fix">
             <div class="container">
-                <div class="achivements-wrapper-2 section-padding">
+                <div class="achivements-wrapper-2 section-padding" style="background-color: black; color: #fff;">
                     <div class="bg-shape">
-                        <img src="assets/img/achivements-shape.png" alt="img">
+                        <img src="assets/img/img_shape_gpt.png" alt="img">
                     </div>
                     <div class="row g-4">
                         <div class="col-lg-6">
@@ -421,18 +421,18 @@
                                         <div class="icon">
                                             <img src="assets/img/icon/21.svg" alt="img">
                                         </div>
-                                        <div class="content">
-                                            <h2><span class="count">30</span>k+</h2>
-                                            <p>LM Deliveries/day</p>
+                                        <div class="content" style="color: #fff;">
+                                            <h2><span class="count" style="color: #fff;">30</span><span style="color: #fff;">k+</span></h2>
+                                            <p style="color: #fff;">LM Deliveries/day</p>
                                         </div>
                                     </div>
                                     <div class="counter-items wow fadeInUp" data-wow-delay=".4s">
                                         <div class="icon">
                                             <img src="assets/img/icon/22.svg" alt="img">
                                         </div>
-                                        <div class="content">
-                                            <h2><span class="count">800</span>+</h2>
-                                            <p>Delivery Masters</p>
+                                        <div class="content" style="color: #fff;">
+                                            <h2><span class="count" style="color: #fff;">800</span><span style="color: #fff;">+</span></h2>
+                                            <p style="color: #fff;">Delivery Masters</p>
                                         </div>
                                     </div>
                                 </div>
@@ -441,18 +441,18 @@
                                         <div class="icon">
                                             <img src="assets/img/icon/23.svg" alt="img">
                                         </div>
-                                        <div class="content">
-                                            <h2><span class="count">40</span>+</h2>
-                                            <p>LM Delivery Hubs</p>
+                                        <div class="content" style="color: #fff;">
+                                            <h2><span class="count" style="color: #fff;">40</span><span style="color: #fff;">+</span></h2>
+                                            <p style="color: #fff;">LM Delivery Hubs</p>
                                         </div>
                                     </div>
                                     <div class="counter-items style-2 wow fadeInUp" data-wow-delay=".4s">
                                         <div class="icon">
                                             <img src="assets/img/icon/24.svg" alt="img">
                                         </div>
-                                        <div class="content">
-                                            <h2><span class="count">40</span>+</h2>
-                                            <p>Cities</p>
+                                        <div class="content" style="color: #fff;">
+                                            <h2><span class="count" style="color: #fff;">40</span><span style="color: #fff;">+</span></h2>
+                                            <p style="color: #fff;">Cities</p>
                                         </div>
                                     </div>
                                 </div>
@@ -462,7 +462,7 @@
                 </div>
             </div>
             <div class="man-image float-bob-x ">
-                <img src="assets/img/man.png" alt="img">
+                <img src="assets/img/indian_deliveryman.jpg" alt="img" style="width: 330px; height: auto; margin-left: 0;">
             </div>
         </section>
 
@@ -475,7 +475,7 @@
                 <img src="assets/img/testimonial/building-shape.png" alt="img">
             </div>
             <div class="testimonial-image">
-                <img src="assets/img/testimonial/testimonial-image.jpg" alt="img">
+                <img src="assets/img/vector_delivery.jpg" alt="img">
             </div>
             <div class="container">
                 <div class="testimonial-wrapper">
@@ -555,87 +555,7 @@
         </section>
 
         <!-- Team Section Start -->
-        <section class="team-section section-padding">
-            <div class="shape-2">
-                <img src="assets/img/team/shape-2.png" alt="img">
-            </div>
-            <div class="container">
-                <div class="section-title text-center">
-                    <h6 class="wow fadeInUp"><i class="fa-regular fa-arrow-left-long"></i>our team members<i class="fa-regular fa-arrow-right-long"></i></h6>
-                    <h2 class="wow fadeInUp" data-wow-delay=".2s">Our Professional Team</h2>
-                </div>
-                <div class="row">
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp">
-                        <div class="team-box-items">
-                            <div class="social-icon d-grid align-items-center">
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            </div>
-                            <div class="team-image">
-                                <img src="assets/img/team/05.jpg" alt="img">
-                            </div>
-                            <div class="team-content">
-                                <h5><a href="team-details.html">Abhishek Singh</a></h5>
-                                <p>CEO & Founder</p>
-                                <a href="team-details" class="icon"><i class="fa-solid fa-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay=".2s">
-                        <div class="team-box-items active">
-                            <div class="social-icon d-grid align-items-center">
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            </div>
-                            <div class="team-image">
-                                <img src="assets/img/team/06.jpg" alt="img">
-                            </div>
-                            <div class="team-content">
-                                <h5><a href="team-details.html">Priyanka Sharma</a></h5>
-                                <p>Operations Director</p>
-                                <a href="team-details" class="icon"><i class="fa-solid fa-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
-                        <div class="team-box-items">
-                            <div class="social-icon d-grid align-items-center">
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            </div>
-                            <div class="team-image">
-                                <img src="assets/img/team/07.jpg" alt="img">
-                            </div>
-                            <div class="team-content">
-                                <h5><a href="team-details.html">Rajiv Borah</a></h5>
-                                <p>Technology Head</p>
-                                <a href="team-details" class="icon"><i class="fa-solid fa-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay=".6s">
-                        <div class="team-box-items">
-                            <div class="social-icon d-grid align-items-center">
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            </div>
-                            <div class="team-image">
-                                <img src="assets/img/team/08.jpg" alt="img">
-                            </div>
-                            <div class="team-content">
-                                <h5><a href="team-details.html">Meghna Das</a></h5>
-                                <p>Business Development Manager</p>
-                                <a href="team-details" class="icon"><i class="fa-solid fa-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Brand Section Start -->
         <div class="brand-section fix section-padding">
