--- a/midmile.html
+++ b/midmile.html
@@ -266,7 +266,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="etashvietnam.html">
+                                                    <a href="etashtradingvietnam.html">
                                                         ETASH Vietnam
                                                     </a>
                                                 </li>
