--- a/pricing.html
+++ b/pricing.html
@@ -272,7 +272,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="etashvietnam.html">
+                                                    <a href="etashtradingvietnam.html">
                                                         ETASH Vietnam
                                                     </a>
                                                 </li>
