--- a/service.html
+++ b/service.html
@@ -265,7 +265,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="etashvietnam.html">
+                                                    <a href="etashtradingvietnam.html">
                                                         ETASH Vietnam
                                                     </a>
                                                 </li>
@@ -368,7 +368,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/hubguy1.png" alt="img">
+                                <img src="assets/img/truck delivery.png" alt="img">
                                 <div class="icon">
                                     <i class="fa-solid fa-plane"></i>
                                 </div>
