--- a/shipping.html
+++ b/shipping.html
@@ -493,7 +493,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="etashvietnam.html">
+                                                    <a href="etashtradingvietnam.html">
                                                         ETASH Vietnam
                                                     </a>
                                                 </li>
