--- a/warehousing.html
+++ b/warehousing.html
@@ -265,7 +265,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="etashvietnam.html">
+                                                    <a href="etashtradingvietnam.html">
                                                         ETASH Vietnam
                                                     </a>
                                                 </li>
