--- a/airfreight.html
+++ b/airfreight.html
@@ -319,7 +319,7 @@
                 <div class="breadcrumb-wrapper-items">
                     <div class="page-heading">
                         <div class="breadcrumb-sub-title">
-                            <h1 class="wow fadeInUp" data-wow-delay=".3s">Last Mile Delivery</h1>
+                            <h1 class="wow fadeInUp" data-wow-delay=".3s">Air Freight</h1>
                         </div>
                         <ul class="breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                             <li>
