--- a/hyperlocal.html
+++ b/hyperlocal.html
@@ -346,7 +346,7 @@
                    <div class="row g-4">
                        <div class="col-12 col-lg-8">
                            <div class="service-details-image">
-                               <img src="assets/img/service/lastmile new hd.jpg" alt="img">
+                               <img src="assets/img/Hyper_Local.png" alt="img">
                            </div>
                            <div class="service-details-content">
                                <h2>HyperLocal Delivery</h2>
