--- a/longhaultransportation.html
+++ b/longhaultransportation.html
@@ -346,7 +346,7 @@
                    <div class="row g-4">
                        <div class="col-12 col-lg-8">
                            <div class="service-details-image">
-                               <img src="assets/img/service/longhaul truck.jpg" alt="img">
+                               <img src="assets/img/long_haul_transportation.jpg" alt="img">
                            </div>
                            <div class="service-details-content">
                                <h2>Long Haul Transportation</h2>
