--- a/midmile.html
+++ b/midmile.html
@@ -348,7 +348,7 @@
                    <div class="row g-4">
                        <div class="col-12 col-lg-8">
                            <div class="service-details-image">
-                               <img src="assets/img/service/Middle-Mile-Delivery (1).jpg" alt="img">
+                               <img src="assets/img/middle_mile_delivery.jpg" alt="img">
                            </div>
                            <div class="service-details-content">
                                <h2>Mid Mile Delivery</h2>
