--- a/packersnmovers.html
+++ b/packersnmovers.html
@@ -344,7 +344,7 @@
                    <div class="row g-4">
                        <div class="col-12 col-lg-8">
                            <div class="service-details-image">
-                               <img src="assets/img/service/professional-packers-movers-services-1714555210-7406043.jpeg" alt="img">
+                               <img src="assets/img/Packers&Movers.jpg" alt="img">
                            </div>
                            <div class="service-details-content">
                                <h2>Packers & Movers</h2>
