--- a/service.html
+++ b/service.html
@@ -351,7 +351,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".2s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/lastmile.png" alt="img">
+                                <img src="assets/img/last_mile_delivery.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fa-sharp fa-solid fa-plane-arrival"></i>
                                 </div>
@@ -368,7 +368,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/truck delivery.png" alt="img">
+                                <img src="assets/img/middle_mile_delivery.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fa-solid fa-plane"></i>
                                 </div>
@@ -385,7 +385,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/03.jpg" alt="img">
+                                <img src="assets/img/Hyper_Local.png" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-landmark"></i>
                                 </div>
@@ -402,7 +402,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".2s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/06.jpg" alt="img">
+                                <img src="assets/img/long_haul_transportation.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
@@ -419,7 +419,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/07.jpg" alt="img">
+                                <img src="assets/img/Warehousing.jpg" alt="img">
                                 <div class="icon">
                                     <i class="far fa-bus"></i>
                                 </div>
@@ -453,7 +453,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/06.jpg" alt="img">
+                                <img src="assets/img/Airfreight.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
@@ -471,7 +471,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/06.jpg" alt="img">
+                                <img src="assets/img/Packers&Movers.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
@@ -489,7 +489,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/06.jpg" alt="img">
+                                <img src="assets/img/SeaFreight.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
@@ -506,13 +506,13 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/service/06.jpg" alt="img">
+                                <img src="assets/img/RailFreight.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
                             </div>
                             <div class="service-content">
-                                <h3><a href="service-details.html">Sea Freight</a></h3>
+                                <h3><a href="service-details.html">Rail Freight</a></h3>
                                 <p>
                                 </p>
                                 <a href="service-details.html" class="link-btn">Explore More <i class="fa-solid fa-arrow-right"></i></a>
