--- a/service.html
+++ b/service.html
@@ -368,7 +368,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/middle_mile_delivery.jpg" alt="img">
+                                <img src="assets/img/Middle_Mile_Delivery.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fa-solid fa-plane"></i>
                                 </div>
@@ -402,7 +402,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".2s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/long_haul_transportation.jpg" alt="img">
+                                <img src="assets/img/Long_Haul_Transportation.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
@@ -453,7 +453,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="service-box-items items-bg">
                             <div class="service-thumb">
-                                <img src="assets/img/Airfreight.jpg" alt="img">
+                                <img src="assets/img/AirFreight.jpg" alt="img">
                                 <div class="icon">
                                     <i class="fas fa-train"></i>
                                 </div>
@@ -520,15 +520,7 @@
                         </div>
                         
                 </div>
-                <div class="page-nav-wrap pt-5 text-center wow fadeInUp" data-wow-delay=".3s">
-                    <ul>
-                        <li><a class="page-numbers icon" href="#"><i class="fa-solid fa-arrow-left"></i></a></li>
-                        <li><a class="page-numbers" href="#">01</a></li>
-                        <li><a class="page-numbers" href="#">02</a></li>
-                        <li><a class="page-numbers" href="#">03</a></li>
-                        <li><a class="page-numbers icon" href="#"><i class="fa-solid fa-arrow-right"></i></a></li>
-                    </ul>
-                </div>
+                
             </div>
         </section>
 
