--- a/airfreight.html
+++ b/airfreight.html
@@ -346,7 +346,7 @@
                    <div class="row g-4">
                        <div class="col-12 col-lg-8">
                            <div class="service-details-image">
-                               <img src="assets/img/service/airfreight hd.jpg" alt="img">
+                               <img src="assets/img/AirFreight.jpg" alt="img">
                            </div>
                            <div class="service-details-content">
                                <h2>Air Freight</h2>
