--- a/midmile.html
+++ b/midmile.html
@@ -351,7 +351,7 @@
                                <img src="assets/img/midmile_delivery.jpg" alt="img">
                            </div>
                            <div class="service-details-content">
-                               <h2>Mid Mile Delivery</h2>
+                               <h2>Middle Mile Delivery</h2>
                                <h3>Ensuring Seamless Connectivity in the Supply Chain</h3>
                                <p>Etash's Mid Mile Delivery service bridges the gap between warehousing and last-mile delivery, ensuring seamless movement of goods across Northeast India. Our strategic network of distribution centers and transportation hubs enables efficient movement of cargo between major cities and regional centers. With a fleet of modern vehicles and experienced drivers, we maintain high service standards while optimizing delivery routes and reducing transit times.</p>
                                <p class="mt-4 mb-4">Our mid-mile delivery solutions are designed to handle various types of cargo, from small parcels to large consignments. We employ advanced route optimization technology and real-time tracking systems to ensure timely deliveries and provide complete visibility of shipments. Our dedicated team works around the clock to manage operations, handle documentation, and coordinate with various stakeholders to ensure smooth transit of goods.</p>
