--- a/service.html
+++ b/service.html
@@ -374,7 +374,7 @@
                                 </div>
                             </div>
                             <div class="service-content">
-                                <h3><a href="midmile.html">Middle Mile</a></h3>
+                                <h3><a href="midmile.html">Middle Mile Delivery</a></h3>
                                 <p>
                                     Strategic transportation between hubs, connecting warehouses and distribution centers to optimize supply chains and reduce transit times.
                                 </p>
